--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   "homepage": "https://github.com/phijaen/civisurbs#readme",
   "devDependencies": {
     "typescript": "~2.1.0",
-    "gulp" : "~3.9.0",   
-    "http-server" : "~0.9.0",
-    "strip-json-comments" : "~2.0.0"
+    "gulp" : "~3.9.0",
+    "gulp-typescript" : "~3.1.0",
+    "gulp-uglify" : "~2.0.0",
+    "del" : "~2.2.0",
+    "http-server" : "~0.9.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "gulp": "gulp"
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
