--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "url": "https://github.com/phijaen/civisurbs/issues"
   },
   "homepage": "https://github.com/phijaen/civisurbs#readme",
-  "engines" : {
-    "node" : ">=4.0.0",
-    "npm" : ">=3.0.0"
+  "engines": {
+    "node": ">=4.0.0",
+    "npm": ">=3.0.0"
   },
   "dependencies": {
     "@angular/common": "~2.4.0",
@@ -36,23 +36,20 @@
     "@angular/platform-browser": "~2.4.0",
     "@angular/platform-browser-dynamic": "~2.4.0",
     "@angular/router": "~3.4.0",
-
     "angular-in-memory-web-api": "~0.2.4",
-    "systemjs" : "~0.19.0",
-    
     "core-js": "~2.4.0",
-    "zone.js": "~0.7.0",
-    
-    "rxjs": "~5.0.0"
+    "rxjs": "~5.0.0",
+    "systemjs": "~0.19.0",
+    "zone.js": "~0.7.0"
   },
   "devDependencies": {
     "concurrently": "~3.1.0",
-    "typescript": "~2.1.0",
-    "gulp" : "~3.9.0",
-    "gulp-uglify" : "~2.0.0",
-    "gulp-rename" : "~1.2.0",
-    "del" : "~2.2.0",
-    "http-server" : "~0.9.0"
+    "del": "~2.2.0",
+    "gulp": "~3.9.0",
+    "gulp-rename": "~1.2.0",
+    "gulp-uglify": "~2.0.0",
+    "http-server": "~0.9.0",
+    "typescript": "~2.1.0"
   },
   "scripts": {
     "start": "tsc --project client && concurrently \"tsc --project client -w\" \"http-server client\" ",
