--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "zone.js": "~0.7.0"
   },
   "devDependencies": {
+    "@types/node": "^7.0.0",
     "concurrently": "~3.1.0",
     "del": "~2.2.0",
     "gulp": "~3.9.0",
