Add client linting as a test for travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,6 @@ before_script:
   - sh -e /etc/init.d/xvfb start
 install:
   - npm install
+  - npm run build-client
+script:
+  - npm run lint-client
