--- a/package.json
+++ b/package.json
@@ -50,10 +50,13 @@
     "gulp-rename": "~1.2.0",
     "gulp-uglify": "~2.0.0",
     "http-server": "~0.9.0",
-    "typescript": "~2.1.0"
+    "typescript": "~2.1.0",
+    "tslint": "~3.15.0"
   },
   "scripts": {
-    "start": "tsc --project client && concurrently \"tsc --project client -w\" \"http-server client\" ",
+    "start": "npm run build-client && concurrently \"tsc --project client -w\" \"http-server client\" ",
+    "build-client" : "tsc --project client",
+    "lint-client" : "tslint ./client/scripts/app/**/*.ts -t verbose --config ./client/tslint.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
