--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "tslint": "~3.15.0"
   },
   "scripts": {
-    "start": "npm run build-client && concurrently \"tsc --project client -w\" \"http-server client\" ",
+    "start": "npm run build-client && concurrently \"npm run tsw-client\" \"npm run run-client\" ",
     "build-client" : "tsc --project client",
+    "tsw-client" : "tsc --project client -w",
+    "run-client" : "http-server client",
     "lint-client" : "tslint ./client/scripts/app/**/*.ts -t verbose --config ./client/tslint.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
