--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "core-js": "~2.4.0",
     "rxjs": "~5.0.0",
     "systemjs": "~0.19.0",
-    "zone.js": "~0.7.0"
+    "zone.js": "~0.7.0",
+    "phaser" : "~2.6.0"
   },
   "devDependencies": {
     "@types/node": "^7.0.0",
