Add import-client-libs directive to npm package.json

--- a/package.json
+++ b/package.json
@@ -55,10 +55,12 @@
   },
   "scripts": {
     "start": "npm run build-client && concurrently \"npm run tsw-client\" \"npm run run-client\" ",
-    "build-client" : "gulp import-client-libs && tsc --project client",
-    "tsw-client" : "tsc --project client -w",
-    "run-client" : "http-server client",
-    "lint-client" : "tslint ./client/scripts/app/**/*.ts -t verbose --config ./client/tslint.json",
+    "build-client": "npm run import-client-libs && tsc --project client",
+    "import-client-libs" : "gulp import-client-libs",
+    "tsw-client": "tsc --project client -w",
+    "run-client": "http-server client",
+    "lint-client": "tslint ./client/scripts/app/**/*.ts -t verbose --config ./client/tslint.json",
     "test": "echo \"Error: no test specified\" && exit 1"
+    
   }
 }
